# LLVM-Calculator

./: CMakeLists.txt  README.md  calculator  main.cpp
LLVM_Calculator/: CMakeLists.txt  calculator.cpp  calculator.h  llvm_evaluator.cpp  llvm_evaluator.h  main.cpp  mainwindow.cpp
